fix: update disabled card opacity for better visibility

--- a/css/game-minions.css
+++ b/css/game-minions.css
@@ -71,5 +71,5 @@ header {
 
 .disabled-card {
   filter: saturate(0);
-  opacity: 0.5;
+  opacity: 0.8;
 }
